# Third_Intelligence_exam

./: Makefile  README.md  pyproject.toml
docs/: multi-agent-diary-system-design.md  multi_agent_world_diary_design.md
docs/multi-agent-world-diary/: 01-system-requirements.md  02-domain-model.md  03-weekly-story-planner.md  04-daily-simulation.md  05-belief-and-intervention.md  06-memory-and-diary.md  07-consistency-and-regeneration.md  08-runtime-and-module-contracts.md  README.md
lumen_diary/: __init__.py  cli.py  config.py  domain.py  narration.py  pipeline.py  rendering.py  scenario.py  storage.py
lumen_diary/llm/: __init__.py  base.py  providers.py
scripts/: codex-worktree.sh
tests/: test_config_and_llm.py  test_domain_and_storage.py  test_narration.py  test_pipeline.py  test_rendering.py
