[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-diary"
version = "0.1.0"
description = "Multi-agent library diary generator for the Third Intelligence exam."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
